<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="gc_title_camera">Aufnahme</string>
    <string name="gc_title_onboarding" />
    <string name="gc_title_review">Übersicht</string>
    <string name="gc_title_help">Hilfe</string>
    <string name="gc_title_photo_tips">Tipps</string>
    <string name="gc_title_supported_formats">Formate</string>
    <string name="gc_title_file_import">Importieren</string>
    <string name="gc_title_analysis">Auswertung</string>
    <string name="gc_title_no_results">Keine Ergebnisse</string>
    <string name="gc_title_error">Fehler</string>
    <string name="gc_help">Hilfe</string>
    <string name="gc_camera_error_no_permission">Bitte gestatte Zugriff auf deine Kamera, um Dokumente fotografieren zu können.</string>
    <string name="gc_camera_error_no_permission_button_title">Zugriff erlauben</string>
    <string name="gc_camera_image_stack_subtitle">Seiten</string>
    <string name="gc_camera_document_import_subtitle">Dateien</string>
    <string name="gc_document_error_multi_page_limit_review_pages_button">Seitenübersicht</string>
    <string name="gc_document_error_multi_page_limit_cancel_button">Abbrechen</string>
    <string name="gc_onboarding_align_corners_title">Dokument flach ausrichten</string>
    <string name="gc_onboarding_align_corners_message">Das Dokument muss flach liegen und sich innerhalb des Rahmens befinden</string>
    <string name="gc_onboarding_lighting_title">Gute Lichtverhältnisse</string>
    <string name="gc_onboarding_lighting_message">Kein Blitz und gutes Licht führt zu besseren Ergebnissen</string>
    <string name="gc_onboarding_multipage_title">Mehrere Seiten</string>
    <string name="gc_onboarding_multipage_message">Es ist möglich mehrere Seiten eines Dokuments zu scannen</string>
    <string name="gc_onboarding_qr_code_title">QR-Codes scannen</string>
    <string name="gc_onboarding_qr_code_message">QR-Codes werden automatisch erkannt und analysiert</string>
    <string name="gc_multi_page_review_add_pages_subtitle">Seiten hinzufügen</string>
    <string name="gc_analysis_activity_indicator_message">Dokument wird analysiert</string>
    <string name="gc_analysis_activity_indicator_message_save_invoices_locally">Dokument wird analysiert &amp; Download in Mediathek vorbereitet</string>
    <string name="gc_pdf_analysis_activity_indicator_message">%s\nwird analysiert</string>
    <string name="gc_photo_tip_align">Das gesamte Dokument sollte sich im Rahmen befinden</string>
    <string name="gc_photo_tip_multipage">Es ist möglich mehrere Seiten eines Dokuments zu scannen</string>
    <string name="gc_photo_tip_lighting">Kein Blitz und gutes Licht führt zu besseren Ergebnissen</string>
    <string name="gc_photo_tip_parallel">Das Handy sollte parallel über dem Dokument gehalten werden</string>
    <string name="gc_photo_tip_flat">Flach gestrichene Dokumente erleichtern die Auswertung</string>
    <string name="gc_noresults_header">Leider konnten keine Informationen aus dem Dokument ausgelesen werden.</string>
    <string name="gc_noresults_header_qr">Der QR-Code enthält keine Zahlungsinformationen.</string>
    <string name="gc_noresults_headline">Tipps für beste Ergebnisse:</string>
    <string name="gc_noresults_retake_images">Foto wiederholen</string>
    <string name="gc_noresults_enter_manually">Manuell ausfüllen</string>
    <string name="gc_error_back_to_camera">Neues Foto</string>
    <string name="gc_error_enter_manually">Manuell ausfüllen</string>
    <string name="gc_error_upload_title">Der Upload des Dokuments ist fehlgeschlagen!</string>
    <string name="gc_error_upload_text">Das Dokument konnte nicht verarbeitet werden. Bitte überprüfen Sie, ob das Bild scharf ist, das Dokument Zahlungsinformationen enthält und im richtigen Dateiformat hochgeladen wurde.</string>
    <string name="gc_error_connection_title">Überprüfen Sie Ihre Internetverbindung</string>
    <string name="gc_error_connection_text">Es konnte keine Verbindung zum Internet hergestellt werden. Bitte überprüfen Sie Ihre Netzwerkverbindung und wiederholen Sie den Vorgang.</string>
    <string name="gc_error_outage_title">Der Dienst ist nicht verfügbar.</string>
    <string name="gc_error_outage_text">Der Dienst ist nicht verfügbar. Bitte versuchen Sie es später erneut. Wir danken Ihnen für Ihr Verständnis.</string>
    <string name="gc_error_server_title">Ein unerwarteter Fehler ist aufgetreten.</string>
    <string name="gc_error_server_text">Etwas ist schiefgelaufen. Es gab eine unerwartete Antwort vom Service. Bitte versuchen Sie es in Kürze erneut. Wir danken Ihnen für Ihr Verständnis.</string>
    <string name="gc_error_maintenance_title">Wartungsarbeiten sind im Gange.</string>
    <string name="gc_error_maintenance_text">Wir führen Wartungsarbeiten an unserem System durch. Bitte versuchen Sie es in Kürze erneut. Wir danken Ihnen für Ihr Verständnis.</string>
    <string name="gc_error_auth_title">Authentifizierung fehlgeschlagen</string>
    <string name="gc_error_auth_text">Der Upload des Dokuments ist fehlgeschlagen aufgrund eines Fehlers bei der Authentifizierung. Bitte versuchen Sie es später noch einmal.</string>
    <string name="gc_error_unexpected_title">Ein unerwarteter Fehler ist aufgetreten.</string>
    <string name="gc_error_unexpected_text">Etwas ist schiefgelaufen. Bitte versuchen Sie es in Kürze erneut. Wir danken Ihnen für Ihr Verständnis.</string>
    <string name="gc_error_file_import_generic_title">Ihre Datei konnte nicht geöffnet werden. Bitte versuchen Sie es mit einer anderen Datei.</string>
    <string name="gc_error_file_import_generic_text"></string>
    <string name="gc_error_file_import_size_title">Diese Datei ist leider zu groß.</string>
    <string name="gc_error_file_import_size_text"></string>
    <string name="gc_error_file_import_page_count_title">Das Dokument darf nicht mehr als 10 Seiten haben.</string>
    <string name="gc_error_file_import_page_count_text"></string>
    <string name="gc_error_file_import_unsupported_title">Nur Dateien vom Format jpg, png, gif oder PDF können analysiert werden.</string>
    <string name="gc_error_file_import_unsupported_with_e_invoice_title">Nur Dateien vom Format jpg, png, gif, PDF oder XML können analysiert werden.</string>
    <string name="gc_error_file_import_unsupported_text"></string>
    <string name="gc_error_file_import_password_title">Passwortgeschützte Dokumente können nicht analysiert werden.</string>
    <string name="gc_error_file_import_password_text"></string>
    <string name="gc_error_file_custom_validation_title"></string>
    <string name="gc_error_file_custom_validation_text"></string>
    <string name="gc_document_import_error">Ihre Datei konnte nicht geöffnet werden. Bitte versuchen Sie es mit einer anderen Datei.</string>
    <string name="gc_storage_permission_denied">Nur mit Datei-Zugriff können gespeicherte Rechnungen hochgeladen werden.</string>
    <string name="gc_storage_permission_denied_positive_button">Zugriff erteilen</string>
    <string name="gc_storage_permission_denied_negative_button">Abbrechen</string>
    <string name="gc_storage_permission_rationale">Um gespeicherte Bilder oder PDFs zu analysieren, wird Datei-Zugriff auf dem Gerät benötigt.</string>
    <string name="gc_storage_permission_rationale_positive_button">Zugriff erteilen</string>
    <string name="gc_storage_permission_rationale_negative_button">Abbrechen</string>
    <string name="gc_document_import_invalid_document">Leider kann diese Datei nicht bearbeitet werden.</string>
    <string name="gc_document_import_error_type_not_supported">Nur Dateien vom Format jpg, png, gif oder PDF können analysiert werden.</string>
    <string name="gc_document_import_error_size_too_large">Diese Datei ist leider zu groß.</string>
    <string name="gc_document_import_error_too_many_pdf_pages">Das Dokument darf nicht mehr als 10 Seiten haben.</string>
    <string name="gc_document_import_error_password_protected_pdf">Passwortgeschützte Dokumente können nicht analysiert werden.</string>
    <string name="gc_document_error_too_many_pages">Das Dokument darf nicht mehr als 10 Seiten haben.</string>
    <string name="gc_document_import_close_error">Abbrechen</string>
    <string name="gc_file_chooser_fotos_section_header">Fotos</string>
    <string name="gc_file_chooser_pdfs_section_header">PDF</string>
    <string name="gc_file_chooser_pdfs_xmls_section_header">Rechnungen: PDF &amp; XML</string>
    <string name="gc_help_item_photo_tips_title">Tipps für beste Ergebnisse</string>
    <string name="gc_help_item_file_import_guide_title">Dokumente von anderen Apps importieren</string>
    <string name="gc_help_item_supported_formats_title">Unterstützte Formate</string>
    <string name="gc_supported_format_printed_invoices">Maschinell erstellte Rechnungen und Überweisungsträger</string>
    <string name="gc_supported_format_single_page_as_jpeg_png_gif">Einseitige Fotos im jpeg, png oder gif Format</string>
    <string name="gc_supported_format_pdf">PDF-Dokumente bis zu 10 Seiten</string>
    <string name="gc_supported_format_qr_code">QR-Codes</string>
    <string name="gc_supported_format_qr_type_bezahl" translatable="false">BezahlCode</string>
    <string name="gc_supported_format_qr_type_eps" translatable="false">eps Überweisung</string>
    <string name="gc_supported_format_qr_type_stuzza" translatable="false">Stuzza (AT)</string>
    <string name="gc_supported_format_qr_type_girocode" translatable="false">Girocode (DE)</string>
    <string name="gc_supported_format_qr_type_gini_payment" translatable="false">QR by Gini</string>
    <string name="gc_supported_format_qr_type_spc" translatable="false">Swiss QR Code (CH)</string>
    <string name="gc_supported_format_qr_type_spd" translatable="false">SPD (CZ)</string>
    <string name="gc_supported_format_qr_type_pay_by_square" translatable="false">Pay by Square (SK)</string>
    <string name="gc_supported_format_qr_type_upnqr" translatable="false">UPN QR (SI)</string>
    <string name="gc_supported_format_qr_type_hub3" translatable="false">HUB3 (HR)</string>
    <string name="gc_supported_format_e_invoices">E-Rechnungen: XRechnung (XML), ZUGFeRD (PDF)</string>
    <string name="gc_unsupported_format_handwriting">Handschrift</string>
    <string name="gc_unsupported_format_photos_of_screens">Fotos von Bildschirmen</string>
    <string name="gc_file_import_section_1_title">1. Rechnung auswählen</string>
    <string name="gc_file_import_section_1_body">Bitte wählen Sie die PDF-Rechnung in der E-Mail-App, im PDF-Ordner oder in einer anderen App aus. Um das Dokument nun an die Banking-App zu senden, verwenden Sie die Funktion "Teilen mit"</string>
    <string name="gc_file_import_section_2_title">2. Aus der App heraus importieren.</string>
    <string name="gc_file_import_section_2_body">Nun die Banking App aus der angezeigten Liste auswählen, um das Dokument zum Analysieren weiterzuleiten.</string>
    <string name="gc_skip">Überspringen</string>
    <string name="gc_next">Weiter</string>
    <string name="gc_get_started">Los geht`s</string>
    <string name="gc_first_illustration_description">Aktivieren Sie die Teilen-Funktion. Dazu wählen Sie eine Datei aus und verwenden anschließend die Teilen-Funktion, dargestellt als Viereck mit hoch-zeigendem Pfeil.</string>
    <string name="gc_second_illustration_description">Banking App auswählen. Wählen Sie nun die gewünschte App aus mit der das Dokument geteilt werden soll.</string>
    <string name="gc_unsupported_qr_code_dialog_title">Dieser QR-Code ist kein Zahlungs-QR-Code</string>
    <string name="gc_unsupported_qr_code_dialog_scan_qr_code">Anderen QR-Code scannen</string>
    <string name="gc_unsupported_qr_code_dialog_capture_document">Dokument fotografieren</string>
    <string name="gc_pages">Seite</string>
    <string name="gc_process_documents">Verarbeiten</string>
    <string name="gc_camera_access">Kamerazugriff</string>
</resources>