<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/backgroundColor"
    android:orientation="vertical">

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="@id/gc_error_header_layout"
        app:layout_constraintEnd_toEndOf="@id/gc_error_header_layout"
        app:layout_constraintTop_toTopOf="@id/gc_error_header_layout"
        app:layout_constraintBottom_toBottomOf="@id/gc_error_header_layout"
        android:alpha="0.15"
        android:background="@color/gc_error_01"/>

    <RelativeLayout
        android:id="@+id/gc_error_header_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_alignParentTop="true"
        android:layout_marginTop="@dimen/gc_large_24"
        android:minHeight="@dimen/gc_large_64"
        android:paddingStart="@dimen/gc_large_24"
        android:paddingEnd="@dimen/gc_large_24">

        <ImageView
            android:id="@+id/gc_error_header_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:contentDescription="@string/gc_title_error"
            android:src="@drawable/gc_alert_triangle_icon"/>

        <TextView
            android:id="@+id/gc_error_header"
            style="@style/GiniCaptureTheme.Typography.Body2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/gc_large_24"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@id/gc_error_header_icon"
            android:gravity="center_vertical"
            android:text="@string/gc_error_upload_title" />
    </RelativeLayout>

    <TextView
        android:id="@+id/gc_error_textview"
        style="@style/GiniCaptureTheme.Typography.Body2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/gc_large"
        android:textColor="?attr/gcErrorScreenSubtitle"
        android:text="@string/gc_error_upload_text"
        android:layout_marginStart="@dimen/gc_large_24"
        android:layout_marginEnd="@dimen/gc_large_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/gc_error_button_container"
        app:layout_constraintTop_toBottomOf="@id/gc_error_header_layout"/>

    <LinearLayout
        android:id="@+id/gc_error_button_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="@dimen/gc_large_24"
        android:layout_marginEnd="@dimen/gc_large_24"
        android:layout_marginBottom="@dimen/gc_large_24">

        <Button
            android:id="@+id/gc_button_error_enter_manually"
            style="@style/GiniCaptureTheme.Widget.Button.OutlinedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/gc_error_enter_manually" />

        <Button
            android:id="@+id/gc_button_error_retake_images"
            style="@style/GiniCaptureTheme.Widget.Button.UnelevatedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/gc_medium"
            android:text="@string/gc_error_back_to_camera" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
