<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?attr/colorSurface"
    android:padding="@dimen/gc_large">

    <Button
        android:id="@+id/gc_skip"
        style="@style/GiniCaptureTheme.Widget.Button.OutlinedButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/gc_large_40"
        android:layout_marginEnd="@dimen/gc_medium"
        android:layout_marginBottom="@dimen/gc_large_48"
        android:text="@string/gc_skip"
        app:layout_constraintBottom_toTopOf="@id/gc_injected_navigation_bar_container_bottom"
        app:layout_constraintEnd_toStartOf="@id/gc_next"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/gc_next"
        style="@style/GiniCaptureTheme.Widget.Button.UnelevatedButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/gc_next"
        android:layout_marginEnd="@dimen/gc_large_40"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintBottom_toBottomOf="@id/gc_skip"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/gc_skip"
        app:layout_constraintTop_toTopOf="@id/gc_skip" />

    <Button
        android:id="@+id/gc_get_started"
        style="@style/GiniCaptureTheme.Widget.Button.UnelevatedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gc_get_started"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/gc_skip"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintWidth_min="120dp" />

</androidx.constraintlayout.widget.ConstraintLayout>