<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/gc_layout_camera_no_permission"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:background="#000">

    <ImageView
        android:id="@+id/gc_image_camera_no_permission"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="16dp"
        android:src="@drawable/gc_no_camera"
        app:layout_constraintBottom_toTopOf="@+id/gc_no_camera_title"
        app:layout_constraintEnd_toEndOf="@+id/gc_no_camera_title"
        app:layout_constraintStart_toStartOf="@+id/gc_no_camera_title" />

    <TextView
        android:id="@+id/gc_no_camera_title"
        style="@style/GiniCaptureTheme.Typography.Headline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/gc_camera_access"
        android:textColor="#fff"
        app:layout_constraintBottom_toTopOf="@+id/gc_text_camera_no_permission"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <!--suppress AndroidDomInspection -->
    <TextView
        android:id="@+id/gc_text_camera_no_permission"
        style="@style/GiniCaptureTheme.Typography.Body1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/xxlarge"
        android:layout_marginEnd="@dimen/xxlarge"
        android:gravity="center"
        android:text="@string/gc_camera_error_no_permission"
        android:textColor="@color/Dark_06"
        android:lineSpacingExtra="5sp"
        android:translationY="-2.62sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!--suppress AndroidDomInspection -->
    <Button
        android:id="@+id/gc_button_camera_no_permission"
        style="@style/GiniCaptureTheme.Widget.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/xxxlarge"
        android:minWidth="120dp"
        android:text="@string/gc_camera_error_no_permission_button_title"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>