<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="?attr/colorError"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout_process_documents_wrapper"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/gc_large"
        android:layout_marginBottom="@dimen/gc_large"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <net.gini.android.capture.view.InjectedViewContainer
            android:id="@+id/injectedViewContainer_injected_loading_indicator_container"
            android:layout_width="@dimen/gc_unelevated_button_height"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_margin="@dimen/gc_medium"
            app:layout_constraintBottom_toBottomOf="@+id/gc_continue"
            app:layout_constraintEnd_toEndOf="@+id/gc_continue"
            app:layout_constraintStart_toStartOf="@+id/gc_continue"
            app:layout_constraintTop_toTopOf="@+id/gc_continue" />

        <Button
            android:id="@+id/button_continue"
            style="@style/GiniCaptureTheme.Widget.Button.UnelevatedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gc_process_documents"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/linearLayout_add_pages_wrapper"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/gc_large_24"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="@+id/button_continue"
            app:layout_constraintStart_toEndOf="@+id/button_continue"
            app:layout_constraintTop_toTopOf="@+id/button_continue">

            <ImageView
                android:id="@+id/imageView_add_page"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                app:srcCompat="@drawable/gc_add_page" />

            <TextView
                android:id="@+id/textView_pages_txt"
                style="@style/GiniCaptureTheme.Typography.Subtitle2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/gc_pages" />
        </LinearLayout>

        <Button
            android:id="@+id/button_add_page_button"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:contentDescription="@string/gc_multi_page_review_add_pages_subtitle"
            android:background="@android:color/transparent"
            app:layout_constraintStart_toStartOf="@id/linearLayout_add_pages_wrapper"
            app:layout_constraintTop_toTopOf="@id/linearLayout_add_pages_wrapper"
            app:layout_constraintBottom_toBottomOf="@id/linearLayout_add_pages_wrapper"
            app:layout_constraintEnd_toEndOf="@id/linearLayout_add_pages_wrapper"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
